--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc src/*.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +15,10 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "ts-node": "^9.0.0",
     "@types/node": "^14.14.2",
     "@types/xml2js": "^0.4.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
     "xml2js": "^0.4.23"
   }
 }
