--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,6 +24,7 @@ jobs:
           node-version: '12.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@pta'
+      - run: cat /home/runner/work/_temp/.npmrc
       - run: npm ci
       - run: npm publish
         env:
