--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '12.x'
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@pta'
+          scope: '@pta-kyma'
       - run: cat /home/runner/work/_temp/.npmrc
       - run: npm ci
       - run: npm publish
