--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc --declarationMap"
   },
   "author": "",
   "license": "ISC",
