--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pta-kyma/c4c-odata-access",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "",
   "main": "lib/main.js",
   "scripts": {
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/winston": "^2.4.4",
     "axios": "^0.20.0",
+    "winston": "^3.3.3",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
