--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pta-kyma/c4c-odata-access",
-  "version": "2.3.3",
+  "version": "2.4.0",
   "description": "",
   "main": "lib/main.js",
   "scripts": {
@@ -12,6 +12,8 @@
   "dependencies": {
     "@types/winston": "^2.4.4",
     "axios": "^0.20.0",
+    "axios-cookiejar-support": "^1.0.1",
+    "tough-cookie": "^4.0.0",
     "winston": "^3.3.3",
     "xml2js": "^0.4.23"
   },
