--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@pta-kyma/c4c-odata-access",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "",
   "main": "lib/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --declarationMap"
+    "build": "tsc --declarationMap",
+    "test-gen": "ts-node src/generate.ts test/config.json test/result && prettier --write test/result"
   },
   "author": "",
   "license": "ISC",
